feat: implement rate limiting middleware; update collections schema and enhance collection management UI

--- a/src/app/(main)/(mdx)/polityka-prywatnosci/polityka.mdx
+++ b/src/app/(main)/(mdx)/polityka-prywatnosci/polityka.mdx
@@ -2,13 +2,13 @@
 
 ## 1. Informacje ogólne
 
-1.1. Niniejsza Polityka Prywatności określa zasady przetwarzania i ochrony danych osobowych Użytkowników serwisu internetowego Grien, dostępnego pod adresem [adres strony internetowej] (dalej: "Serwis").
+1.1. Niniejsza Polityka Prywatności określa zasady przetwarzania i ochrony danych osobowych Użytkowników serwisu internetowego Grien, dostępnego pod adresem https://grien.devmilek.com (dalej: "Serwis").
 
-1.2. Administratorem danych osobowych zbieranych za pośrednictwem Serwisu jest [imię i nazwisko lub nazwa nieformalna], adres e-mail: [adres e-mail kontaktowy] (dalej: "Administrator").
+1.2. Administratorem danych osobowych zbieranych za pośrednictwem Serwisu jest devmilek, adres e-mail: devmilek@gmail.com (dalej: "Administrator").
 
 1.3. Administrator dba o bezpieczeństwo danych osobowych Użytkowników, w szczególności poprzez stosowanie odpowiednich zabezpieczeń technicznych i organizacyjnych.
 
-1.4. Kontakt z Administratorem jest możliwy za pośrednictwem poczty elektronicznej pod adresem: [adres e-mail kontaktowy].
+1.4. Kontakt z Administratorem jest możliwy za pośrednictwem poczty elektronicznej pod adresem: devmilek@gmail.com.
 
 ## 2. Podstawa prawna przetwarzania danych
 
