feat: update privacy policy effective date and contact information

--- a/src/app/(main)/(mdx)/polityka-prywatnosci/polityka.mdx
+++ b/src/app/(main)/(mdx)/polityka-prywatnosci/polityka.mdx
@@ -129,7 +129,7 @@
 
 12.1. W sprawach nieuregulowanych niniejszą Polityką Prywatności zastosowanie mają odpowiednie przepisy prawa polskiego i europejskiego, w szczególności RODO.
 
-12.2. Niniejsza Polityka Prywatności wchodzi w życie z dniem [data].
+12.2. Niniejsza Polityka Prywatności wchodzi w życie z dniem 18.03.2025.
 
-[Imię i nazwisko lub nazwa nieformalna]
-[Adres e-mail kontaktowy]
+Miłosz Kraiński
+devmilek@gmail.com
